--- a/src/main/resources/assets/mubble/lang/fr_fr.json
+++ b/src/main/resources/assets/mubble/lang/fr_fr.json
@@ -566,92 +566,92 @@
 	"block.mubble.smb3_question_block": "Bloc ? (SMB3)",
 	"block.mubble.smw_question_block": "Bloc ? (SMW)",
 	"block.mubble.nsmbu_question_block": "Bloc ? (NSMBU)",
-	"//block.mubble.smb_ground_ground_block": "Ground Block (SMB - Ground)",
-	"//block.mubble.smb_underground_ground_block": "Ground Block (SMB - Underground)",
-	"//block.mubble.smb_underwater_ground_block": "Ground Block (SMB - Underwater)",
-	"//block.mubble.smb_ghost_house_ground_block": "Ground Block (SMB - Ghost House)",
-	"//block.mubble.smb_airship_ground_block": "Ground Block (SMB - Airship)",
-	"//block.mubble.smb_night_airship_ground_block": "Ground Block (SMB - Night Airship)",
-	"//block.mubble.smb_castle_ground_block": "Ground Block (SMB - Castle)",
-	"//block.mubble.smb_desert_ground_block": "Ground Block (SMB - Desert)",
-	"//block.mubble.smb_forest_ground_block": "Ground Block (SMB - Forest)",
-	"//block.mubble.smb_snow_ground_block": "Ground Block (SMB - Snow)",
-	"//block.mubble.smb_night_snow_ground_block": "Ground Block (SMB - Night Snow)",
-	"//block.mubble.smb_sky_ground_block": "Ground Block (SMB - Sky)",
-	"//block.mubble.smw_ground_ground_block": "Ground Block (SMW - Ground)",
-	"//block.mubble.smw_underground_ground_block": "Ground Block (SMW - Underground)",
-	"//block.mubble.smw_underwater_ground_block": "Ground Block (SMW - Underwater)",
-	"//block.mubble.smw_ghost_house_ground_block": "Ground Block (SMW - Ghost House)",
-	"//block.mubble.smw_airship_ground_block": "Ground Block (SMW - Airship)",
-	"//block.mubble.smw_castle_ground_block": "Ground Block (SMW - Castle)",
-	"//block.mubble.smw_desert_ground_block": "Ground Block (SMW - Desert)",
-	"//block.mubble.smw_forest_ground_block": "Ground Block (SMW - Forest)",
-	"//block.mubble.smw_snow_ground_block": "Ground Block (SMW - Snow)",
-	"//block.mubble.smw_night_snow_ground_block": "Ground Block (SMW - Night Snow)",
-	"//block.mubble.smw_sky_ground_block": "Ground Block (SMW - Sky)",
-	"//block.mubble.smb3_ground_ground_block": "Ground Block (SMB3 - Ground)",
-	"//block.mubble.smb3_underground_ground_block": "Ground Block (SMB3 - Underground)",
-	"//block.mubble.smb3_underwater_ground_block": "Ground Block (SMB3 - Underwater)",
-	"//block.mubble.smb3_ghost_house_ground_block": "Ground Block (SMB3 - Ghost House)",
-	"//block.mubble.smb3_airship_ground_block": "Ground Block (SMB3 - Airship)",
-	"//block.mubble.smb3_night_airship_ground_block": "Ground Block (SMB3 - Night Airship)",
-	"//block.mubble.smb3_castle_ground_block": "Ground Block (SMB3 - Castle)",
-	"//block.mubble.smb3_night_castle_ground_block": "Ground Block (SMB3 - Night Castle)",
-	"//block.mubble.smb3_desert_ground_block": "Ground Block (SMB3 - Desert)",
-	"//block.mubble.smb3_snow_ground_block": "Ground Block (SMB3 - Snow)",
-	"//block.mubble.smb3_night_snow_ground_block": "Ground Block (SMB3 - Night Snow)",
-	"//block.mubble.smb3_sky_ground_block": "Ground Block (SMB3 - Sky)",
-	"//block.mubble.smb_empty_block": "Empty Block (SMB)",
-	"//block.mubble.smb3_empty_block": "Empty Block (SMB3)",
-	"//block.mubble.smw_empty_block": "Empty Block (SMW)",
-	"//block.mubble.nsmbu_empty_block": "Empty Block (NSMBU)",
-	"//block.mubble.smb_rotating_block": "Rotating Block (SMB)",
-	"//block.mubble.smb3_rotating_block": "Rotating Block (SMB3)",
-	"//block.mubble.smw_rotating_block": "Rotating Block (SMW)",
-	"//block.mubble.nsmbu_rotating_block": "Rotating Block (NSMBU)",
-	"//block.mubble.light_block": "Light Block",
-	"//block.mubble.smb_ground_brick_block": "Brick Block (SMB - Ground)",
-	"//block.mubble.smb_underground_brick_block": "Brick Block (SMB - Underground)",
-	"//block.mubble.smb_castle_brick_block": "Brick Block (SMB - Castle)",
-	"//block.mubble.smb_snow_brick_block": "Brick Block (SMB - Snow)",
-	"//block.mubble.smb_night_snow_brick_block": "Brick Block (SMB - Night Snow)",
-	"//block.mubble.smb3_brick_block": "Brick Block (SMB3)",
-	"//block.mubble.smw_brick_block": "Brick Block (SMW)",
-	"//block.mubble.nsmbu_brick_block": "Brick Block (NSMBU)",
-	"//block.mubble.smb_golden_brick_block": "Golden Brick Block (SMB)",
-	"//block.mubble.smb3_golden_brick_block": "Golden Brick Block (SMB3)",
-	"//block.mubble.smw_golden_brick_block": "Golden Brick Block (SMW)",
-	"//block.mubble.nsmbu_golden_brick_block": "Golden Brick Block (NSMBU)",
-	"//block.mubble.smb_ground_hard_block": "Hard Block (SMB - Ground)",
-	"//block.mubble.smb_underground_hard_block": "Hard Block (SMB - Underground)",
-	"//block.mubble.smb_underwater_hard_block": "Hard Block (SMB - Underwater)",
-	"//block.mubble.smb_castle_hard_block": "Hard Block (SMB - Castle)",
-	"//block.mubble.smb_snow_hard_block": "Hard Block (SMB - Snow)",
-	"//block.mubble.smb_night_snow_hard_block": "Hard Block (SMB - Night Snow)",
-	"//block.mubble.smb3_hard_block": "Hard Block (SMB3)",
-	"//block.mubble.smw_stone_hard_block": "Hard Block (SMW - Stone)",
-	"//block.mubble.smw_wood_hard_block": "Hard Block (SMW - Wood)",
-	"//block.mubble.nsmbu_hard_block": "Hard Block (NSMBU)",
-	"//block.mubble.smb_ice_block": "Ice Block (SMB)",
-	"//block.mubble.smb3_ice_block": "Ice Block (SMB3)",
-	"//block.mubble.smw_ice_block": "Ice Block (SMW)",
-	"//block.mubble.nsmbu_ice_block": "Ice Block (NSMBU)",
-	"//block.mubble.smb_note_block": "Note Block (SMB)",
-	"//block.mubble.smb3_note_block": "Note Block (SMB3)",
-	"//block.mubble.smw_note_block": "Note Block (SMW)",
-	"//block.mubble.nsmbu_note_block": "Note Block (NSMBU)",
-	"//block.mubble.smb_super_note_block": "Super Note Block (SMB)",
-	"//block.mubble.smb3_super_note_block": "Super Note Block (SMB3)",
-	"//block.mubble.smw_super_note_block": "Super Note Block (SMW)",
-	"//block.mubble.nsmbu_super_note_block": "Super Note Block (NSMBU)",
-	"//block.mubble.smb_door": "Door (SMB)",
-	"//block.mubble.smb3_door": "Door (SMB3)",
-	"//block.mubble.smw_door": "Door (SMW)",
-	"//block.mubble.nsmbu_door": "Door (NSMBU)",
-	"//block.mubble.smb_key_door": "Key Door (SMB)",
-	"//block.mubble.smb3_key_door": "Key Door (SMB3)",
-	"//block.mubble.smw_key_door": "Key Door (SMW)",
-	"//block.mubble.nsmbu_key_door": "Key Door (NSMBU)",
+	"block.mubble.smb_ground_ground_block": "Bloc de sol (SMB - Plein air)",
+	"block.mubble.smb_underground_ground_block": "Bloc de sol (SMB - Souterrain)",
+	"block.mubble.smb_underwater_ground_block": "Bloc de sol (SMB - Aquatique)",
+	"block.mubble.smb_ghost_house_ground_block": "Bloc de sol (SMB - Manoir hanté)",
+	"block.mubble.smb_airship_ground_block": "Bloc de sol (SMB - Forteresse volante)",
+	"block.mubble.smb_night_airship_ground_block": "Bloc de sol (SMB - Forteresse volante de nuit)",
+	"block.mubble.smb_castle_ground_block": "Bloc de sol (SMB - Château)",
+	"block.mubble.smb_desert_ground_block": "Bloc de sol (SMB - Désert)",
+	"block.mubble.smb_forest_ground_block": "Bloc de sol (SMB - Forest)",
+	"block.mubble.smb_snow_ground_block": "Bloc de sol (SMB - Neige)",
+	"block.mubble.smb_night_snow_ground_block": "Bloc de sol (SMB - Neige de nuit)",
+	"block.mubble.smb_sky_ground_block": "Bloc de sol (SMB - Ciel)",
+	"block.mubble.smw_ground_ground_block": "Bloc de sol (SMW - Plein air)",
+	"block.mubble.smw_underground_ground_block": "Bloc de sol (SMW - Souterrain)",
+	"block.mubble.smw_underwater_ground_block": "Bloc de sol (SMW - Aquatique)",
+	"block.mubble.smw_ghost_house_ground_block": "Bloc de sol (SMW - Manoir hanté)",
+	"block.mubble.smw_airship_ground_block": "Bloc de sol (SMW - Forteresse volante)",
+	"block.mubble.smw_castle_ground_block": "Bloc de sol (SMW - Château)",
+	"block.mubble.smw_desert_ground_block": "Bloc de sol (SMW - Désert)",
+	"block.mubble.smw_forest_ground_block": "Bloc de sol (SMW - Forest)",
+	"block.mubble.smw_snow_ground_block": "Bloc de sol (SMW - Neige)",
+	"block.mubble.smw_night_snow_ground_block": "Bloc de sol (SMW - Neige de nuit)",
+	"block.mubble.smw_sky_ground_block": "Bloc de sol (SMW - Ciel)",
+	"block.mubble.smb3_ground_ground_block": "Bloc de sol (SMB3 - Plein air)",
+	"block.mubble.smb3_underground_ground_block": "Bloc de sol (SMB3 - Souterrain)",
+	"block.mubble.smb3_underwater_ground_block": "Bloc de sol (SMB3 - Aquatique)",
+	"block.mubble.smb3_ghost_house_ground_block": "Bloc de sol (SMB3 - Manoir hanté)",
+	"block.mubble.smb3_airship_ground_block": "Bloc de sol (SMB3 - Forteresse volante)",
+	"block.mubble.smb3_night_airship_ground_block": "Bloc de sol (SMB3 - Forteresse volante de nuit)",
+	"block.mubble.smb3_castle_ground_block": "Bloc de sol (SMB3 - Château)",
+	"block.mubble.smb3_night_castle_ground_block": "Bloc de sol (SMB3 - Château de nuit)",
+	"block.mubble.smb3_desert_ground_block": "Bloc de sol (SMB3 - Désert)",
+	"block.mubble.smb3_snow_ground_block": "Bloc de sol (SMB3 - Neige)",
+	"block.mubble.smb3_night_snow_ground_block": "Bloc de sol (SMB3 - Neige de nuit)",
+	"block.mubble.smb3_sky_ground_block": "Bloc de sol (SMB3 - Ciel)",
+	"block.mubble.smb_empty_block": "Bloc vide (SMB)",
+	"block.mubble.smb3_empty_block": "Bloc vide (SMB3)",
+	"block.mubble.smw_empty_block": "Bloc vide (SMW)",
+	"block.mubble.nsmbu_empty_block": "Bloc vide (NSMBU)",
+	"block.mubble.smb_rotating_block": "Bloc pivotant (SMB)",
+	"block.mubble.smb3_rotating_block": "Bloc pivotant (SMB3)",
+	"block.mubble.smw_rotating_block": "Bloc pivotant (SMW)",
+	"block.mubble.nsmbu_rotating_block": "Bloc pivotant (NSMBU)",
+	"block.mubble.light_block": "Bloc lumineux",
+	"block.mubble.smb_ground_brick_block": "Bloc de brique (SMB - Plein air)",
+	"block.mubble.smb_underground_brick_block": "Bloc de brique (SMB - Souterrain)",
+	"block.mubble.smb_castle_brick_block": "Bloc de brique (SMB - Château)",
+	"block.mubble.smb_snow_brick_block": "Bloc de brique (SMB - Neige)",
+	"block.mubble.smb_night_snow_brick_block": "Bloc de brique (SMB - Neige de nuit)",
+	"block.mubble.smb3_brick_block": "Bloc de brique (SMB3)",
+	"block.mubble.smw_brick_block": "Bloc de brique (SMW)",
+	"block.mubble.nsmbu_brick_block": "Bloc de brique (NSMBU)",
+	"block.mubble.smb_golden_brick_block": "Bloc de brique dorée (SMB)",
+	"block.mubble.smb3_golden_brick_block": "Bloc de brique dorée (SMB3)",
+	"block.mubble.smw_golden_brick_block": "Bloc de brique dorée (SMW)",
+	"block.mubble.nsmbu_golden_brick_block": "Bloc de brique dorée (NSMBU)",
+	"block.mubble.smb_ground_hard_block": "Bloc solide (SMB - Plein air)",
+	"block.mubble.smb_underground_hard_block": "Bloc solide (SMB - Souterrain)",
+	"block.mubble.smb_underwater_hard_block": "Bloc solide (SMB - Aquatique)",
+	"block.mubble.smb_castle_hard_block": "Bloc solide (SMB - Château)",
+	"block.mubble.smb_snow_hard_block": "Bloc solide (SMB - Neige)",
+	"block.mubble.smb_night_snow_hard_block": "Bloc solide (SMB - Neige de nuit)",
+	"block.mubble.smb3_hard_block": "Bloc solide (SMB3)",
+	"block.mubble.smw_stone_hard_block": "Bloc solide (SMW - Pierre)",
+	"block.mubble.smw_wood_hard_block": "Bloc solide (SMW - Bois)",
+	"block.mubble.nsmbu_hard_block": "Bloc solide (NSMBU)",
+	"block.mubble.smb_ice_block": "Bloc de glace (SMB)",
+	"block.mubble.smb3_ice_block": "Bloc de glace (SMB3)",
+	"block.mubble.smw_ice_block": "Bloc de glace (SMW)",
+	"block.mubble.nsmbu_ice_block": "Bloc de glace (NSMBU)",
+	"block.mubble.smb_note_block": "Bloc note (SMB)",
+	"block.mubble.smb3_note_block": "Bloc note (SMB3)",
+	"block.mubble.smw_note_block": "Bloc note (SMW)",
+	"block.mubble.nsmbu_note_block": "Bloc note (NSMBU)",
+	"block.mubble.smb_super_note_block": "Super bloc note (SMB)",
+	"block.mubble.smb3_super_note_block": "Super bloc note (SMB3)",
+	"block.mubble.smw_super_note_block": "Super bloc note (SMW)",
+	"block.mubble.nsmbu_super_note_block": "Super bloc note (NSMBU)",
+	"block.mubble.smb_door": "Télé-porte (SMB)",
+	"block.mubble.smb3_door": "Télé-porte (SMB3)",
+	"block.mubble.smw_door": "Télé-porte (SMW)",
+	"block.mubble.nsmbu_door": "Télé-porte (NSMBU)",
+	"block.mubble.smb_key_door": "Porte verrouillée (SMB)",
+	"block.mubble.smb3_key_door": "Porte verrouillée (SMB3)",
+	"block.mubble.smw_key_door": "Porte verrouillée (SMW)",
+	"block.mubble.nsmbu_key_door": "Porte verrouillée (NSMBU)",
 
 	"block.mubble.fire_flower": "Fleur de feu",
 	"block.mubble.ice_flower": "Fleur de glace",
@@ -748,26 +748,26 @@
 	"block.mubble.yellow_studiopolis_clapper": "Clap jaune de Studiopolis",
 	"block.mubble.blue_studiopolis_clapper": "Clap bleu de Studiopolis",
 
-	"//block.mubble.press_garden_planks": "Press Garden Planks",
-	"//block.mubble.pink_press_garden_sapling": "Pink Press Garden Sapling",
-	"//block.mubble.red_press_garden_sapling": "Red Press Garden Sapling",
-	"//block.mubble.press_garden_log": "Press Garden Log",
-	"//block.mubble.stripped_press_garden_log": "Stripped Press Garden Log",
-	"//block.mubble.press_garden_wood": "Press Garden Wood",
-	"//block.mubble.stripped_press_garden_wood": "Stripped Press Garden Wood",
-	"//block.mubble.pink_press_garden_leaves": "Pink Press Garden Leaves",
-	"//block.mubble.pink_press_garden_leaf_pile": "Pink Press Garden Leaves Pile",
-	"//block.mubble.red_press_garden_leaves": "Red Press Garden Leaves",
-	"//block.mubble.red_press_garden_leaf_pile": "Red Press Garden Leaves Pile",
-	"//block.mubble.press_garden_pressure_plate": "Press Garden Pressure Plate",
-	"//block.mubble.press_garden_trapdoor": "Press Garden Trapdoor",
-	"//block.mubble.press_garden_button": "Press Garden Button",
-	"//block.mubble.press_garden_stairs": "Press Garden Stairs",
-	"//block.mubble.press_garden_slab": "Press Garden Slab",
-	"//block.mubble.press_garden_vertical_slab": "Press Garden Vertical Slab",
-	"//block.mubble.press_garden_fence_gate": "Press Garden Fence Gate",
-	"//block.mubble.press_garden_fence": "Press Garden Fence",
-	"//block.mubble.press_garden_door": "Press Garden Door",
+	"block.mubble.press_garden_planks": "Planches de Press Garden",
+	"block.mubble.red_press_garden_sapling": "Pousse rouge de Press Garden",
+	"block.mubble.pink_press_garden_sapling": "Pousse rose de Press Garden",
+	"block.mubble.press_garden_log": "Bûche de Press Garden",
+	"block.mubble.stripped_press_garden_log": "Bûche écorcée de Press Garden",
+	"block.mubble.press_garden_wood": "Bois de Press Garden",
+	"block.mubble.stripped_press_garden_wood": "Bois écorcé de Press Garden",
+	"block.mubble.red_press_garden_leaves": "Feuilles rouges de Press Garden",
+	"block.mubble.red_press_garden_leaf_pile": "Tapis de feuilles rouges de Press Garden",
+	"block.mubble.pink_press_garden_leaves": "Feuilles roses de Press Garden",
+	"block.mubble.pink_press_garden_leaf_pile": "Tapis de feuilles roses de Press Garden",
+	"block.mubble.press_garden_pressure_plate": "Plaque de pression en bois de Press Garden",
+	"block.mubble.press_garden_trapdoor": "Trappe en bois de Press Garden",
+	"block.mubble.press_garden_button": "Bouton en bois de Press Garden",
+	"block.mubble.press_garden_stairs": "Escaliers en bois de Press Garden",
+	"block.mubble.press_garden_slab": "Dalle en bois de Press Garden",
+	"block.mubble.press_garden_vertical_slab": "Dalle verticale en bois de Press Garden",
+	"block.mubble.press_garden_fence_gate": "Portillon en bois de Press Garden",
+	"block.mubble.press_garden_fence": "Barrière en bois de Press Garden",
+	"block.mubble.press_garden_door": "Porte en bois de Press Garden",
 	
 	"block.mubble.spring": "Ressort",
 
