--- a/src/main/resources/assets/mubble/lang/nl_nl.json
+++ b/src/main/resources/assets/mubble/lang/nl_nl.json
@@ -748,26 +748,26 @@
 	"block.mubble.yellow_studiopolis_clapper": "Gele studiopolisklepel",
 	"block.mubble.blue_studiopolis_clapper": "Blauwe studiopolisklepel",
 
-	"block.mubble.press_garden_planks": "Druktuinplanken",
-	"block.mubble.pink_press_garden_sapling": "Roze druktuin kiemplant",
-	"block.mubble.red_press_garden_sapling": "Rode druktuin kiemplant",
-	"block.mubble.press_garden_log": "Druktuinstam",
-	"block.mubble.stripped_press_garden_log": "Gestripte druktuin stam",
-	"block.mubble.press_garden_wood": "Druktuinhout",
-	"block.mubble.stripped_press_garden_wood": "Gestripte druktuin hout",
-	"block.mubble.pink_press_garden_leaves": "Roze druktuin bladeren",
-	"block.mubble.pink_press_garden_leaf_pile": "Roze druktuin bladeren hoop",
-	"block.mubble.red_press_garden_leaves": "Rode druktuin bladeren",
-	"block.mubble.red_press_garden_leaf_pile": "Rode druktuin bladeren hoop",
-	"block.mubble.press_garden_pressure_plate": "Druktuin drukplaat",
-	"block.mubble.press_garden_trapdoor": "Druktuin valluik",
-	"block.mubble.press_garden_button": "Druktuin knop",
-	"block.mubble.press_garden_stairs": "Druktuin trap",
-	"block.mubble.press_garden_slab": "Druktuin Slab",
-	"block.mubble.press_garden_vertical_slab": "Druktuin verticale plaat",
-	"block.mubble.press_garden_fence_gate": "Druktuin poort",
-	"block.mubble.press_garden_fence": "Druktuin hek",
-	"block.mubble.press_garden_door": "Druktuin deur",
+	"block.mubble.press_garden_planks": "Perstuinplanken",
+	"block.mubble.pink_press_garden_sapling": "Roze perstuin kiemplant",
+	"block.mubble.red_press_garden_sapling": "Rode perstuin kiemplant",
+	"block.mubble.press_garden_log": "Perstuinstam",
+	"block.mubble.stripped_press_garden_log": "Gestripte perstuin stam",
+	"block.mubble.press_garden_wood": "Perstuinhout",
+	"block.mubble.stripped_press_garden_wood": "Gestripte perstuin hout",
+	"block.mubble.pink_press_garden_leaves": "Roze perstuin bladeren",
+	"block.mubble.pink_press_garden_leaf_pile": "Roze perstuin bladeren hoop",
+	"block.mubble.red_press_garden_leaves": "Rode perstuin bladeren",
+	"block.mubble.red_press_garden_leaf_pile": "Rode perstuin bladeren hoop",
+	"block.mubble.press_garden_pressure_plate": "Perstuin drukplaat",
+	"block.mubble.press_garden_trapdoor": "Perstuin valluik",
+	"block.mubble.press_garden_button": "Perstuin knop",
+	"block.mubble.press_garden_stairs": "Perstuin trap",
+	"block.mubble.press_garden_slab": "Perstuin Slab",
+	"block.mubble.press_garden_vertical_slab": "Perstuin verticale plaat",
+	"block.mubble.press_garden_fence_gate": "Perstuin poort",
+	"block.mubble.press_garden_fence": "Perstuin hek",
+	"block.mubble.press_garden_door": "Perstuin deur",
 	
 	"block.mubble.spring": "Veer",
 
@@ -849,8 +849,8 @@
 	"block.mubble.potted_light_gray_mushroom": "Gepotte lichtgrijze paddenstoel",
 	"block.mubble.potted_gray_mushroom": "Gepotte grijze paddenstoel",
 	"block.mubble.potted_black_mushroom": "Gepotte zwarte paddenstoel",
-	"block.mubble.potted_pink_press_garden_sapling": "Gepotte roze druktuin kiemplant",
-	"block.mubble.potted_red_press_garden_sapling": "Gepotte rode druktuin kiemplant",
+	"block.mubble.potted_pink_press_garden_sapling": "Gepotte roze perstuin kiemplant",
+	"block.mubble.potted_red_press_garden_sapling": "Gepotte rode perstuin kiemplant",
 	"block.mubble.potted_scarlet_sapling": "Gepotte scharlakekiemplant",
 	"block.mubble.potted_scarlet_mushroom": "Gepotte scharlake paddenstoel",
 	"block.mubble.potted_scarlet_orchid": "Gepotte scharlake orchidee",
@@ -878,7 +878,7 @@
 	"item.mubble.banana": "Bannaan",
 	"item.mubble.apricot": "Abrikoos",
 	"item.mubble.mango": "Mango",
-	"item.mubble.blueberries": "Blauwe bessen",
+	"item.mubble.blueberries": "Blauwebessen",
 	"item.mubble.totem_of_ascending": "Totem der opstijging",
 
 
@@ -1034,7 +1034,7 @@
 	"biome.mubble.white_cherry_oak_forest": "Wittekerseneiken bos",
 	"biome.mubble.permafrost": "Permafrost",
 	
-	"biome.mubble.press_garden": "Druktuin",
+	"biome.mubble.press_garden": "Perstuin",
 
 	"biome.mubble.scarlet_forest": "Scharlake bos",
 
