--- a/src/main/resources/assets/mubble/lang/fr_fr.json
+++ b/src/main/resources/assets/mubble/lang/fr_fr.json
@@ -546,6 +546,7 @@
 
 	"block.mubble.unstable_stone": "Roche instable",
 	"block.mubble.fluid_tank": "Réservoir à fluides",
+	"//block.mubble.placer": "Placer",
 
 	"//block.mubble.dandelion_pile": "Dandelion Pile",
 	"//block.mubble.poppy_pile": "Poppy Pile",
@@ -1008,6 +1009,11 @@
 
 	"item.mubble.mayro_cap": "Casquette de Mayro",
 	"item.mubble.noteblock_head": "Tête de Noteblock",
+
+
+
+	"comment": "CONTAINERS",
+	"//container.mubble.placer": "Placer",
 
 
 
