--- a/src/main/resources/assets/mubble/lang/de_de.json
+++ b/src/main/resources/assets/mubble/lang/de_de.json
@@ -982,6 +982,7 @@
 	"item.mubble.pink_gold_peach_crown": "Peachs Rosagoldene Krone",
 	"item.mubble.super_crown": "Superkrone",
 	"item.mubble.mario_wedding_hat": "Marios Hochzeitshut",
+	"//item.mubble.boo_hat": "Boo Hat",
 	"item.mubble.broque_monsieur_head": "Broque Monsieurs Kopf",
 
 
