--- a/src/main/resources/assets/mubble/lang/en_gb.json
+++ b/src/main/resources/assets/mubble/lang/en_gb.json
@@ -982,6 +982,7 @@
 	"item.mubble.pink_gold_peach_crown": "Pink Gold Peach's Crown",
 	"item.mubble.super_crown": "Super Crown",
 	"item.mubble.mario_wedding_hat": "Mario's Wedding Hat",
+	"//item.mubble.boo_hat": "Boo Hat",
 	"item.mubble.broque_monsieur_head": "Broque Monsieur's Head",
 
 
