--- a/src/main/resources/assets/mubble/lang/en_ud.json
+++ b/src/main/resources/assets/mubble/lang/en_ud.json
@@ -982,6 +982,7 @@
 	"item.mubble.pink_gold_peach_crown": "uʍoɹƆ s,ɥɔɐǝԀ ploפ ʞuᴉԀ",
 	"item.mubble.super_crown": "uʍoɹƆ ɹǝdnS",
 	"item.mubble.mario_wedding_hat": "ʇɐH ƃuᴉppǝM s,oᴉɹɐW",
+	"//item.mubble.boo_hat": "Boo Hat",
 	"item.mubble.broque_monsieur_head": "pɐǝH s,ɹnǝᴉsuoW ǝnboɹq",
 
 
