--- a/src/main/resources/assets/mubble/lang/es_es.json
+++ b/src/main/resources/assets/mubble/lang/es_es.json
@@ -982,6 +982,7 @@
 	"item.mubble.pink_gold_peach_crown": "Corona de Peach de oro rosa",
 	"item.mubble.super_crown": "Supercorona",
 	"//item.mubble.mario_wedding_hat": "Mario's Wedding Hat",
+	"//item.mubble.boo_hat": "Boo Hat",
 	"item.mubble.broque_monsieur_head": "Cabeza de Broque Monsieur",
 
 
