--- a/src/main/resources/assets/mubble/lang/fr_fr.json
+++ b/src/main/resources/assets/mubble/lang/fr_fr.json
@@ -982,6 +982,7 @@
 	"item.mubble.pink_gold_peach_crown": "Couronne de Peach d'or rose",
 	"item.mubble.super_crown": "Super couronne",
 	"item.mubble.mario_wedding_hat": "Chapeau de mariage de Mario",
+	"//item.mubble.boo_hat": "Boo Hat",
 	"item.mubble.broque_monsieur_head": "Tête de Charlie Bloc",
 
 
