--- a/src/main/resources/assets/mubble/lang/nl_nl.json
+++ b/src/main/resources/assets/mubble/lang/nl_nl.json
@@ -982,6 +982,7 @@
 	"item.mubble.pink_gold_peach_crown": "Rozegouden Peach's kroon",
 	"item.mubble.super_crown": "Superkroon",
 	"item.mubble.mario_wedding_hat": "Mario's trouwdag hoed",
+	"//item.mubble.boo_hat": "Boo Hat",
 	"item.mubble.broque_monsieur_head": "Broque Monsieur's hoofd",
 
 
