--- a/src/main/resources/assets/mubble/lang/pt_br.json
+++ b/src/main/resources/assets/mubble/lang/pt_br.json
@@ -982,6 +982,7 @@
 	"item.mubble.pink_gold_peach_crown": "Coroa Rosa Ouro da Peach",
 	"item.mubble.super_crown": "Super Coroa",
 	"item.mubble.mario_wedding_hat": "Chapéu de Casamento do Mario",
+	"//item.mubble.boo_hat": "Boo Hat",
 	"item.mubble.broque_monsieur_head": "Cabeça de Broque Monsieur",
 
 
