--- a/src/main/resources/assets/mubble/lang/zh_tw.json
+++ b/src/main/resources/assets/mubble/lang/zh_tw.json
@@ -982,6 +982,7 @@
 	"//item.mubble.pink_gold_peach_crown": "<newline>",
 	"item.mubble.super_crown": "超級王冠",
 	"//item.mubble.mario_wedding_hat": "Mario's Wedding Hat",
+	"//item.mubble.boo_hat": "Boo Hat",
 	"//item.mubble.broque_monsieur_head": "<newline>",
 
 
