--- a/src/main/resources/assets/mubble/lang/lol_us.json
+++ b/src/main/resources/assets/mubble/lang/lol_us.json
@@ -982,6 +982,7 @@
 	"item.mubble.pink_gold_peach_crown": "pingol peech cron",
 	"item.mubble.super_crown": "waifu creator",
 	"//item.mubble.mario_wedding_hat": "Mario's Wedding Hat",
+	"//item.mubble.boo_hat": "Boo Hat",
 	"item.mubble.broque_monsieur_head": "HELPEEEZ MOIIII SIVOULPAI",
 
 
