--- a/src/main/resources/assets/mubble/lang/en_ud.json
+++ b/src/main/resources/assets/mubble/lang/en_ud.json
@@ -816,11 +816,11 @@
 	"block.mubble.yellow_puyo": "oʎnԀ ʍollǝ⅄",
 	"block.mubble.red_puyo": "oʎnԀ pǝɹ",
 	"block.mubble.purple_puyo": "oʎnԀ ǝldɹnԀ",
+	"//block.mubble.gray_puyo": "Gray Puyo",
 	"block.mubble.garbage_puyo": "oʎnԀ ǝƃɐqɹɐפ",
 	"block.mubble.point_puyo": "oʎnԀ ʇuᴉoԀ",
 	"block.mubble.hard_puyo": "oʎnԀ pɹɐH",
 	"block.mubble.iron_puyo": "oʎnԀ uoɹI",
-	"block.mubble.puyo_block": "ʞɔolᗺ oʎnԀ",
 
 
 	"block.mubble.koretato_block": "ʞɔolᗺ oʇɐʇǝɹoʞ",
