--- a/src/main/resources/assets/mubble/lang/lol_us.json
+++ b/src/main/resources/assets/mubble/lang/lol_us.json
@@ -816,11 +816,11 @@
 	"block.mubble.yellow_puyo": "happe pyo :D",
 	"block.mubble.red_puyo": "ANGERYYYYYYYYYYYYYYYYY PYOOOOOOOOOO",
 	"block.mubble.purple_puyo": "ur borin tis pyo",
+	"//block.mubble.gray_puyo": "Gray Puyo",
 	"block.mubble.garbage_puyo": "pure garbeg pyo",
 	"block.mubble.point_puyo": "pure pint pyo",
 	"block.mubble.hard_puyo": "My puyo hard",
 	"block.mubble.iron_puyo": "ALIEEEEEEEN PYO AHHHHHHH",
-	"block.mubble.puyo_block": "it's a pyo ston lol",
 
 
 	"block.mubble.koretato_block": "Koretato blok",
