Added Pikachu Ears

--- a/src/main/resources/assets/mubble/lang/en_gb.json
+++ b/src/main/resources/assets/mubble/lang/en_gb.json
@@ -990,6 +990,7 @@
 	"item.mubble.bandana": "Bandana",
 
 
+	"//item.mubble.pikachu_ears": "Pikachu Ears",
 	"item.mubble.snorlax_hat": "Snorlax Hat",
 
 
