--- a/src/main/resources/assets/mubble/lang/en_ud.json
+++ b/src/main/resources/assets/mubble/lang/en_ud.json
@@ -990,6 +990,7 @@
 	"item.mubble.bandana": "ɐuɐpuɐq",
 
 
+	"//item.mubble.pikachu_ears": "Pikachu Ears",
 	"item.mubble.snorlax_hat": "ʇɐH xɐlɹouS",
 
 
