--- a/src/main/resources/assets/mubble/lang/lol_us.json
+++ b/src/main/resources/assets/mubble/lang/lol_us.json
@@ -990,6 +990,7 @@
 	"item.mubble.bandana": "banana",
 
 
+	"//item.mubble.pikachu_ears": "Pikachu Ears",
 	"item.mubble.snorlax_hat": "sleepy boi",
 
 
