--- a/src/main/resources/assets/mubble/lang/zh_cn.json
+++ b/src/main/resources/assets/mubble/lang/zh_cn.json
@@ -990,6 +990,7 @@
 	"item.mubble.bandana": "手帕",
 
 
+	"//item.mubble.pikachu_ears": "Pikachu Ears",
 	"//item.mubble.snorlax_hat": "<newline>",
 
 
