--- a/src/main/resources/assets/mubble/lang/de_de.json
+++ b/src/main/resources/assets/mubble/lang/de_de.json
@@ -990,6 +990,7 @@
 	"item.mubble.bandana": "Kopftuch",
 
 
+	"//item.mubble.pikachu_ears": "Pikachu Ears",
 	"item.mubble.snorlax_hat": "Snorlaxs Hut",
 
 
