--- a/src/main/resources/assets/mubble/lang/es_es.json
+++ b/src/main/resources/assets/mubble/lang/es_es.json
@@ -990,6 +990,7 @@
 	"item.mubble.bandana": "Pañuelo",
 
 
+	"//item.mubble.pikachu_ears": "Pikachu Ears",
 	"//item.mubble.snorlax_hat": "<newline>",
 
 
