--- a/src/main/resources/assets/mubble/lang/pt_br.json
+++ b/src/main/resources/assets/mubble/lang/pt_br.json
@@ -1087,12 +1087,14 @@
 	"advancements.mubble.get_super_crown.description": "Encontre a Super Coroa",
 	"advancements.mubble.get_bandage.title": "Recuperação",
 	"advancements.mubble.get_bandage.description": "Obtenha uma bandagem",
-	"advancements.mubble.get_all_caps.title": "Super-Estrelas",
-	"advancements.mubble.get_all_caps.description": "Craftar todos os bonés",
 	"advancements.mubble.get_all_crowns.title": "Heroinas pela Coroa",
 	"advancements.mubble.get_all_crowns.description": "Obtenha todas as coroas",
 	"advancements.mubble.get_all_caps.title": "Super-Estrelas",
 	"advancements.mubble.get_all_caps.description": "Obtenha todos os bonés",
+	"//advancements.mubble.get_vanadium.title": "Vanadiums!",
+	"//advancements.mubble.get_vanadium.description": "Acquire vanadiums",
+	"//advancements.mubble.get_timeswap_table.title": "Retroactive",
+	"//advancements.mubble.get_timeswap_table.description": "Craft a Timeswap Table",
 	"advancements.mubble.get_tetris_block.title": "Está Tudo Conectado",
 	"advancements.mubble.get_tetris_block.description": "Coloque em sua mão um Bloco de Tetris",
 
