--- a/src/main/resources/assets/mubble/lang/de_de.json
+++ b/src/main/resources/assets/mubble/lang/de_de.json
@@ -1093,6 +1093,8 @@
 	"advancements.mubble.get_all_caps.description": "Besorge alle Mützen",
 	"advancements.mubble.get_vanadium.title": "Vanadiums!",
 	"advancements.mubble.get_vanadium.description": "Beschaffe vanadiums",
+	"//advancements.mubble.get_timeswap_table.title": "Retroactive",
+	"//advancements.mubble.get_timeswap_table.description": "Craft a Timeswap Table",
 	"advancements.mubble.get_tetris_block.title": "Es Ist Alles Verbunden",
 	"advancements.mubble.get_tetris_block.description": "Halte einen Tetris-block.mubble in deiner Hand",
 
