--- a/src/main/resources/assets/mubble/lang/en_gb.json
+++ b/src/main/resources/assets/mubble/lang/en_gb.json
@@ -1093,6 +1093,8 @@
 	"advancements.mubble.get_all_caps.description": "Get all the caps",
 	"advancements.mubble.get_vanadium.title": "Vanadiums!",
 	"advancements.mubble.get_vanadium.description": "Acquire vanadiums",
+	"//advancements.mubble.get_timeswap_table.title": "Retroactive",
+	"//advancements.mubble.get_timeswap_table.description": "Craft a Timeswap Table",
 	"advancements.mubble.get_tetris_block.title": "It's All Connected",
 	"advancements.mubble.get_tetris_block.description": "Get your hand on a Tetris Block",
 
