--- a/src/main/resources/assets/mubble/lang/en_ud.json
+++ b/src/main/resources/assets/mubble/lang/en_ud.json
@@ -1093,6 +1093,8 @@
 	"advancements.mubble.get_all_caps.description": "sdɐɔ ǝɥʇ llɐ ʇǝפ",
 	"advancements.mubble.get_vanadium.title": "¡sɯnᴉpɐuɐΛ",
 	"advancements.mubble.get_vanadium.description": "sɯnᴉpɐuɐʌ ǝɹᴉnbɔ∀",
+	"//advancements.mubble.get_timeswap_table.title": "Retroactive",
+	"//advancements.mubble.get_timeswap_table.description": "Craft a Timeswap Table",
 	"advancements.mubble.get_tetris_block.title": "pǝʇɔǝuuoƆ ll∀ s,ʇI",
 	"advancements.mubble.get_tetris_block.description": "ʞɔolᗺ sᴉɹʇǝ┴ ɐ uo puɐɥ ɹnoʎ ʇǝפ",
 
