--- a/src/main/resources/assets/mubble/lang/es_es.json
+++ b/src/main/resources/assets/mubble/lang/es_es.json
@@ -1093,6 +1093,8 @@
 	"//advancements.mubble.get_all_caps.description": "Get all the caps",
 	"advancements.mubble.get_vanadium.title": "Vanadios!",
 	"advancements.mubble.get_vanadium.description": "Adquiere vanadios",
+	"//advancements.mubble.get_timeswap_table.title": "Retroactive",
+	"//advancements.mubble.get_timeswap_table.description": "Craft a Timeswap Table",
 	"advancements.mubble.get_tetris_block.title": "Está todo conectado",
 	"advancements.mubble.get_tetris_block.description": "Consigue un bloque Tetris",
 
