--- a/src/main/resources/assets/mubble/lang/fr_fr.json
+++ b/src/main/resources/assets/mubble/lang/fr_fr.json
@@ -1093,6 +1093,8 @@
 	"advancements.mubble.get_all_caps.description": "Obtenez toutes les casquettes",
 	"advancements.mubble.get_vanadium.title": "Du vanadium !",
 	"advancements.mubble.get_vanadium.description": "Obtenez du vanadium",
+	"//advancements.mubble.get_timeswap_table.title": "Retroactive",
+	"//advancements.mubble.get_timeswap_table.description": "Craft a Timeswap Table",
 	"advancements.mubble.get_tetris_block.title": "Connectés à travers l'espace",
 	"advancements.mubble.get_tetris_block.description": "Attrapez un bloc Tetris",
 
