--- a/src/main/resources/assets/mubble/lang/lol_us.json
+++ b/src/main/resources/assets/mubble/lang/lol_us.json
@@ -1093,6 +1093,8 @@
 	"//advancements.mubble.get_all_caps.description": "Get all the caps",
 	"advancements.mubble.get_vanadium.title": "purple in da poket",
 	"advancements.mubble.get_vanadium.description": "get da shiny purple thingy",
+	"//advancements.mubble.get_timeswap_table.title": "Retroactive",
+	"//advancements.mubble.get_timeswap_table.description": "Craft a Timeswap Table",
 	"advancements.mubble.get_tetris_block.title": "falin in th sky",
 	"advancements.mubble.get_tetris_block.description": "tirtris bloks fun",
 
