--- a/src/main/resources/assets/mubble/lang/zh_tw.json
+++ b/src/main/resources/assets/mubble/lang/zh_tw.json
@@ -1093,6 +1093,8 @@
 	"//advancements.mubble.get_all_caps.description": "Get all the caps",
 	"advancements.mubble.get_vanadium.title": "釩！",
 	"advancements.mubble.get_vanadium.description": "獲得釩",
+	"//advancements.mubble.get_timeswap_table.title": "Retroactive",
+	"//advancements.mubble.get_timeswap_table.description": "Craft a Timeswap Table",
 	"advancements.mubble.get_tetris_block.title": "連接成功",
 	"advancements.mubble.get_tetris_block.description": "手握俄羅斯方塊",
 
