--- a/src/main/resources/assets/mubble/lang/de_de.json
+++ b/src/main/resources/assets/mubble/lang/de_de.json
@@ -1051,9 +1051,10 @@
 
 
 	"comment": "SUBTITLES",
-	"subtitles.mubble.block.note_block.jump": "Notenblock genutzt",
 	"subtitles.mubble.block.question_block.loot.power_up": "?-Block gibt Power-Up",
 	"subtitles.mubble.block.question_block.loot.coin": "?-Block gibt Münze",
+	"subtitles.mubble.block.note_block.jump": "Notenblock genutzt",
+	"//subtitles.mubble.block.door.key.success": "Key used",
 	"subtitles.mubble.block.spring.trigger": "Feder ausgelöst",
 	"subtitles.mubble.item.cape_feather.use": "Federmütze benutzt",
 	"subtitles.mubble.item.smash_ball.use": "Smash-Ball benutzt",
