--- a/src/main/resources/assets/mubble/lang/en_gb.json
+++ b/src/main/resources/assets/mubble/lang/en_gb.json
@@ -1051,9 +1051,10 @@
 
 
 	"comment": "SUBTITLES",
-	"subtitles.mubble.block.note_block.jump": "Note Block used",
 	"subtitles.mubble.block.question_block.loot.power_up": "? Block drops power up",
 	"subtitles.mubble.block.question_block.loot.coin": "? Block drops coin",
+	"subtitles.mubble.block.note_block.jump": "Note Block used",
+	"//subtitles.mubble.block.door.key.success": "Key used",
 	"subtitles.mubble.block.spring.trigger": "Spring triggered",
 	"subtitles.mubble.item.cape_feather.use": "Cape Feather used",
 	"subtitles.mubble.item.smash_ball.use": "Smash Ball used",
