--- a/src/main/resources/assets/mubble/lang/en_ud.json
+++ b/src/main/resources/assets/mubble/lang/en_ud.json
@@ -1051,9 +1051,10 @@
 
 
 	"comment": "SUBTITLES",
-	"subtitles.mubble.block.note_block.jump": "pǝsn ʞɔolᗺ ǝʇoN",
 	"subtitles.mubble.block.question_block.loot.power_up": "dn ɹǝʍod sdoɹp ʞɔolᗺ ¿",
 	"subtitles.mubble.block.question_block.loot.coin": "uᴉoɔ sdoɹp ʞɔolᗺ ¿",
+	"subtitles.mubble.block.note_block.jump": "pǝsn ʞɔolᗺ ǝʇoN",
+	"//subtitles.mubble.block.door.key.success": "Key used",
 	"subtitles.mubble.block.spring.trigger": "pǝɹǝƃƃᴉɹʇ ƃuᴉɹdS",
 	"subtitles.mubble.item.cape_feather.use": "pǝsn ɹǝɥʇɐǝℲ ǝdɐƆ",
 	"subtitles.mubble.item.smash_ball.use": "pǝsn llɐq ɥsɐɯS",
