--- a/src/main/resources/assets/mubble/lang/es_es.json
+++ b/src/main/resources/assets/mubble/lang/es_es.json
@@ -1051,9 +1051,10 @@
 
 
 	"comment": "SUBTITLES",
-	"//subtitles.mubble.block.note_block.jump": "<newline>",
 	"//subtitles.mubble.block.question_block.loot.power_up": "? Block drops power up",
 	"subtitles.mubble.block.question_block.loot.coin": "Bloque ? suelta una moneda",
+	"//subtitles.mubble.block.note_block.jump": "<newline>",
+	"//subtitles.mubble.block.door.key.success": "Key used",
 	"//subtitles.mubble.block.spring.trigger": "Spring triggered",
 	"subtitles.mubble.item.cape_feather.use": "Pluma utilizada",
 	"subtitles.mubble.item.smash_ball.use": "Bola de Smash utilizada",
