--- a/src/main/resources/assets/mubble/lang/pt_br.json
+++ b/src/main/resources/assets/mubble/lang/pt_br.json
@@ -1051,9 +1051,10 @@
 
 
 	"comment": "SUBTITLES",
-	"subtitles.mubble.block.note_block.jump": "Note Block used",
 	"subtitles.mubble.block.question_block.loot.power_up": "Bloco de ? dropou um power up",
 	"subtitles.mubble.block.question_block.loot.coin": "Bloco de ? dropa uma moeda",
+	"//subtitles.mubble.block.note_block.jump": "Note Block used",
+	"//subtitles.mubble.block.door.key.success": "Key used",
 	"subtitles.mubble.block.spring.trigger": "Primavera acionada",
 	"subtitles.mubble.item.cape_feather.use": "Pena da Capa foi usada",
 	"subtitles.mubble.item.smash_ball.use": "Bola Smash foi usada",
