--- a/src/main/resources/assets/mubble/lang/zh_cn.json
+++ b/src/main/resources/assets/mubble/lang/zh_cn.json
@@ -1051,9 +1051,10 @@
 
 
 	"comment": "SUBTITLES",
-	"//subtitles.mubble.block.note_block.jump": "<newline>",
 	"//subtitles.mubble.block.question_block.loot.power_up": "? Block drops power up",
 	"subtitles.mubble.block.question_block.loot.coin": "问号块:掉落硬币",
+	"//subtitles.mubble.block.note_block.jump": "<newline>",
+	"//subtitles.mubble.block.door.key.success": "Key used",
 	"//subtitles.mubble.block.spring.trigger": "Spring triggered",
 	"subtitles.mubble.item.cape_feather.use": "披风羽毛:被使用",
 	"subtitles.mubble.item.smash_ball.use": "粉碎球:被使用",
