--- a/src/main/resources/assets/mubble/lang/zh_tw.json
+++ b/src/main/resources/assets/mubble/lang/zh_tw.json
@@ -1051,9 +1051,10 @@
 
 
 	"comment": "SUBTITLES",
-	"//subtitles.mubble.block.note_block.jump": "<newline>",
 	"subtitles.mubble.block.question_block.loot.power_up": "問號塊:掉落超級蘑菇",
 	"subtitles.mubble.block.question_block.loot.coin": "問號塊:掉落硬幣",
+	"//subtitles.mubble.block.note_block.jump": "<newline>",
+	"//subtitles.mubble.block.door.key.success": "Key used",
 	"//subtitles.mubble.block.spring.trigger": "Spring triggered",
 	"subtitles.mubble.item.cape_feather.use": "披風羽毛:被使用",
 	"subtitles.mubble.item.smash_ball.use": "粉碎球:被使用",
